--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.3.0",
+		"react-loading-skeleton": "^3.3.1",
 		"tailwindcss": "^3.3.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.2",
