--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.3.0",
 		"react-loading-skeleton": "^3.3.1",
+		"react-parallax-tilt": "^1.7.143",
 		"tailwindcss": "^3.3.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.2",
