--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"react-icons": "^4.9.0",
 		"react-loading-skeleton": "^3.3.1",
 		"react-parallax-tilt": "^1.7.143",
+		"react-svg": "^16.1.15",
 		"tailwindcss": "^3.3.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.2",
