--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"swiper": "^9.3.2"
 	},
 	"devDependencies": {
+		"@types/js-cookie": "^3.0.3",
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -31,6 +32,7 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.3.4",
+		"js-cookie": "^3.0.5",
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.3.0",
