--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@types/js-cookie": "^3.0.3",
 		"@types/react": "^18.0.37",
 		"@types/react-dom": "^18.0.11",
+		"@types/react-lazy-load-image-component": "^1.5.3",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
 		"@vitejs/plugin-react": "^4.0.0",
@@ -37,6 +38,7 @@
 		"prettier": "^2.8.8",
 		"prettier-plugin-tailwindcss": "^0.3.0",
 		"react-icons": "^4.9.0",
+		"react-lazy-load-image-component": "^1.6.0",
 		"react-loading-skeleton": "^3.3.1",
 		"react-parallax-tilt": "^1.7.143",
 		"react-svg": "^16.1.15",
