--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
-    "compilerOptions": {
-      "target": "es5",
+  "compilerOptions": {
+      "outDir": "./dist/",
+      "sourceMap": true,
+      "noImplicitAny": false,
       "module": "commonjs",
-      "lib": ["es6"],
-      "strict": true,
-      "esModuleInterop": true
-    }
+      "target": "es6",
+      "jsx": "react",
+      "noUnusedParameters": false,
+      "lib": ["dom", "es5", "es6", "dom.iterable", "scripthost"],
+      "allowJs": true,
   }
-  
+}
