--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
 	},
 	"devDependencies": {
 		"@types/js-cookie": "^3.0.3",
-		"@types/react": "^18.0.37",
-		"@types/react-dom": "^18.0.11",
+		"@types/node": "^20.2.6",
+		"@types/react": "^18.2.11",
+		"@types/react-dom": "^18.2.4",
 		"@types/react-lazy-load-image-component": "^1.5.3",
+		"@types/react-router-dom": "^5.3.3",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
 		"@vitejs/plugin-react": "^4.0.0",
