--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
       "noImplicitAny": false,
       "module": "commonjs",
       "target": "es6",
-      "jsx": "react",
+      "jsx": "react-jsx",
       "noUnusedParameters": false,
       "lib": ["dom", "es5", "es6", "dom.iterable", "scripthost"],
       "allowJs": true,
