--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@types/react-dom": "^18.2.4",
 		"@types/react-lazy-load-image-component": "^1.5.3",
 		"@types/react-router-dom": "^5.3.3",
+		"@types/swiper": "^6.0.0",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
 		"@vitejs/plugin-react": "^4.0.0",
