--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,40 @@
+// {
+//   "compilerOptions": {
+//       "outDir": "./dist/",
+//       "sourceMap": true,
+//       "noImplicitAny": false,
+//       "module": "commonjs",
+//       "target": "es6",
+//       "jsx": "react-jsx",
+//       "noUnusedParameters": false,
+//       "lib": ["dom", "es5", "es6", "dom.iterable", "scripthost"],
+//       "allowJs": true,
+//       "esModuleInterop": true,
+//   }
+// }
+
 {
   "compilerOptions": {
-      "outDir": "./dist/",
-      "sourceMap": true,
-      "noImplicitAny": false,
-      "module": "commonjs",
-      "target": "es6",
-      "jsx": "react-jsx",
-      "noUnusedParameters": false,
-      "lib": ["dom", "es5", "es6", "dom.iterable", "scripthost"],
-      "allowJs": true,
-      "esModuleInterop": true,
-  }
+    "target": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+    "noImplicitAny": false,
+    
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
+
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
+  },
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
