--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "noImplicitAny": false,
-    
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -35,6 +35,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "vite.config.ts", "tsconfig.node.json", "custom.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
