--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "types": ["vite/client"],
+    "types": ["vite/client", "node"],
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "skipLibCheck": true,
